--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ export NERD_BACKUP_AWS_ACCESS_KEY_ID=aws-access-key-id
 export NERD_BACKUP_AWS_SECRET_ACCESS_KEY=aws-secret-access-key
 export NERD_BACKUP_VOLUMES_TO_BACKUP=vol1,vol2,vol3
 export NERD_BACKUP_TAG_PREFIX=tag-prefix
+export NERD_BACKUP_BACKUP_INTERVAL=PT24H
