--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.98"
+anyhow = { version = "1.0.98", features = ["std"] }
 bollard = "0.19.1"
 dotenvy = "0.15.7"
 envy = "0.4.2"
+humantime = "2.2.0"
+iso8601 = "0.6.3"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = [
