--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   nerd-backup:
-    image: nerd-backup:latest # Make sure to build your Docker image first: docker build -t nerd-backup .
+    image: ghcr.io/avranju/nerd-backup:latest # Make sure to build your Docker image first: docker build -t nerd-backup .
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/lib/docker/volumes:/var/lib/docker/volumes:ro
@@ -13,7 +11,7 @@ services:
       - NERD_BACKUP_AWS_SECRET_ACCESS_KEY=<your_aws_secret_access_key>
       - NERD_BACKUP_VOLUMES_TO_BACKUP=<volume1,volume2,volume3>
       - NERD_BACKUP_TAG_PREFIX=<your_tag_prefix>
-    # Set restart to "no" for one-off job behavior
-    restart: "no"
+      - NERD_BACKUP_BACKUP_INTERVAL=PT24H # ISO 8601 duration format
+    restart: unless-stopped
     # Use command to override the entrypoint if needed, or rely on ENTRYPOINT from Dockerfile
     # command: ./nerd-backup 
