--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.46.1", features = [
   "net",
   "macros",
   "process",
+  "signal",
 ] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
