--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/lib/docker/volumes:/var/lib/docker/volumes:ro
+      - nerd-backup-data:/var/lib/nerd-backup
     environment:
       - NERD_BACKUP_RESTIC_REPOSITORY=<your_restic_repository_path>
       - NERD_BACKUP_RESTIC_PASSWORD=<your_restic_password>
@@ -15,3 +16,6 @@ services:
     restart: unless-stopped
     # Use command to override the entrypoint if needed, or rely on ENTRYPOINT from Dockerfile
     # command: ./nerd-backup 
+
+volumes:
+  nerd-backup-data:
